WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288979
Rare crash in LocalFrameView::handleWheelEventForScrolling()
https://bugs.webkit.org/show_bug.cgi?id=288979
Summary
Rare crash in LocalFrameView::handleWheelEventForScrolling()
Simon Fraser (smfr)
Reported
2025-03-03 10:58:13 PST
Crash data suggest that scrollingNodeID() can return `std::nullopt` in some cases.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2025-03-03 10:58:34 PST
<
rdar://141452614
>
Simon Fraser (smfr)
Comment 2
2025-03-03 11:18:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41786
EWS
Comment 3
2025-03-03 17:17:55 PST
Committed
291540@main
(fffd531788a1): <
https://commits.webkit.org/291540@main
> Reviewed commits have been landed. Closing PR #41786 and removing active labels.
EWS
Comment 4
2025-03-04 17:45:11 PST
Committed
289651.225@safari-7621-branch
(ab533372f750): <
https://commits.webkit.org/289651.225@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2733 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug