Rare crash in LocalFrameView::handleWheelEventForScrolling() https://bugs.webkit.org/show_bug.cgi?id=288979 rdar://141452614

Reviewed by Tim Horton.

Crash data suggest that LocalFrameView::scrollingNodeID() can return a `std::nullopt` while handling user
events, so protect against that. This can happen, for example, if the RenderView is null. I wasn't able
to replicate this in a test.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::handleWheelEventForScrolling):

Canonical link: https://commits.webkit.org/291540@main